--- a/SerialPortNotify/App.config
+++ b/SerialPortNotify/App.config
@@ -1,6 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="SerialPortNotify.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+    <userSettings>
+        <SerialPortNotify.Properties.Settings>
+            <setting name="EnableConnectNotify" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="EnableDisconnectNotify" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="TipShowTime" serializeAs="String">
+                <value>5000</value>
+            </setting>
+            <setting name="ClickPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ClickPathArg" serializeAs="String">
+                <value />
+            </setting>
+        </SerialPortNotify.Properties.Settings>
+    </userSettings>
 </configuration>
