--- a/SerialPortNotify/SerialPortNotify.csproj
+++ b/SerialPortNotify/SerialPortNotify.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>mainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="NativeMethods.cs" />
+    <Compile Include="PortInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistryMan.cs" />
